--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@types/node": "12.12.7",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
+    "moment": "^2.24.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
-    "typescript": "3.7.2"
+    "typescript": "3.7.2",
+    "uuid": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
