--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.4",
     "moment": "^2.24.0",
+    "node-sass": "^4.13.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-icons": "^3.8.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "sass-loader": "^8.0.0",
     "typescript": "3.7.2",
     "uuid": "^3.3.3"
   },
