--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
+    "react-app-polyfill": "^1.0.4",
     "react-dom": "^16.11.0",
     "react-icons": "^3.8.0",
     "react-redux": "^7.1.3",
@@ -33,12 +34,14 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "ie 11"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "ie 11"
     ]
   },
   "devDependencies": {
