--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "todo-react-typescript",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@testing-library/react": "^9.3.2",
     "@types/jest": "^24.0.23",
@@ -25,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -46,6 +47,8 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.3",
-    "@types/react-redux": "^7.1.5"
-  }
+    "@types/react-redux": "^7.1.5",
+    "gh-pages": "^2.1.1"
+  },
+  "homepage": "http://Seonghui.github.io/todo-list"
 }
