--- a/package.json
+++ b/package.json
@@ -50,5 +50,5 @@
     "@types/react-redux": "^7.1.5",
     "gh-pages": "^2.1.1"
   },
-  "homepage": "http://Seonghui.github.io/todo-list"
+  "homepage": "http://seonghui.github.io/todo-list"
 }
